--- a/Dockerfile.aws_cli_cdk
+++ b/Dockerfile.aws_cli_cdk
@@ -10,7 +10,6 @@ RUN pip install pipenv
 RUN apt-get -y update && \
     apt-get -y upgrade
 
-
 #--------------------
 # Install AWS CDK
 #--------------------
@@ -37,3 +36,8 @@ RUN apt-get install -yqq unzip && \
 RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
     unzip awscliv2.zip && \
     ./aws/install
+
+#--------------------
+# Install AWS EB CLI
+#--------------------
+RUN pip install awsebcli
