--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@
 pre-commit==3.5.0
 
 # code formatters and linters
-black==23.10.0
 flake8==5.0.4
 flake8-blind-except==0.2.1
 flake8-broken-line==0.6.0
@@ -23,3 +22,6 @@ flake8-pytest-style==1.6.0
 flake8-quotes==3.3.1
 flake8-string-format==0.3.0
 flake8-variables-names==0.0.5
+
+# testing
+pytest==7.4.2
