--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,16 @@
 repos:
+-   repo: https://github.com/psf/black-pre-commit-mirror
+    rev: '23.10.0'
+    hooks:
+    -   id: black
+        name: black
+        description: "Black: The uncompromising Python code formatter"
+        entry: black
+        args: ["--skip-string-normalization"]
+        language: python
+        minimum_pre_commit_version: 2.9.2
+        require_serial: true
+        types_or: [ python, pyi ]
 -   repo: local
     hooks:
     -   id: flake8
