--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,8 +5,7 @@ repos:
     -   id: black
         name: black
         description: "Black: The uncompromising Python code formatter"
-        entry: black
-        args: ["--skip-string-normalization"]
+        entry: black --skip-string-normalization
         language: python
         minimum_pre_commit_version: 2.9.2
         require_serial: true
@@ -16,7 +15,6 @@ repos:
     -   id: flake8
         name: flake8
         description: wemake-python-styleguide enforcement
-        entry: flake8
-        args: ["--config=setup.cfg"]
+        entry: flake8 --config=setup.cfg
         language: python
         types: [python]
